# ess-helm

./: .gitignore  CHANGELOG.md  DEVELOPERS.md  Dockerfile.ci-runner  LICENSE-COMMERCIAL  README.md  REUSE.toml  artifacthub-repo.yaml  ct.yaml  docker-bake.hcl  poetry.toml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: actions-linting.yml  artifact-hub.yml  build-test.yml  changelog_check.yml  docker.yml  licensing.yml  matrix-tools.yml  pytest.yml  releasing.yml  scripts-linting.yml
charts/element-web/: .helmignore  Chart.yaml  values.schema.json  values.yaml
charts/element-web/ci/: checkov-values.yaml  minimal-values.yaml  pytest-values.yaml
charts/element-web/source/: values.schema.json  values.yaml.j2
charts/element-web/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  nginx_configmap.yaml  service.yaml  serviceaccount.yaml
charts/ess-library/: .helmignore  Chart.yaml  values.yaml
charts/ess-library/source/: values.schema.json  values.yaml.j2
charts/ess-library/templates/: _credentials.tpl  _labels.tpl  _pods.tpl
charts/matrix-stack/: .helmignore  Chart.yaml  README.md  values.schema.json  values.yaml
charts/matrix-stack/ci/: element-call-checkov-values.yaml  element-call-minimal-values.yaml  element-call-secrets-externally-values.yaml  element-call-secrets-in-helm-values.yaml  element-web-checkov-values.yaml  element-web-minimal-values.yaml  example-default-enabled-components-values.yaml  example-default-enabled-components.values.yaml  init-secrets-checkov-values.yaml  init-secrets-minimal-values.yaml  matrix-authentication-service-checkov-values.yaml  matrix-authentication-service-external-synapse-values.yaml  matrix-authentication-service-keep-auth-in-synapse-values.yaml  matrix-authentication-service-keep-auth-synapse-secrets-externally-values.yaml  matrix-authentication-service-keep-auth-synapse-secrets-in-helm-values.yaml  matrix-authentication-service-minimal-values.yaml  matrix-authentication-service-postgres-secrets-externally-values.yaml  matrix-authentication-service-postgres-secrets-in-helm-values.yaml  matrix-authentication-service-postgresql-secrets-externally-values.yaml  matrix-authentication-service-postgresql-secrets-in-helm-values.yaml  matrix-authentication-service-secrets-externally-values.yaml  matrix-authentication-service-secrets-in-helm-values.yaml  matrix-authentication-service-synapse-secrets-externally-values.yaml  matrix-authentication-service-synapse-secrets-in-helm-values.yaml  matrix-rtc-checkov-values.yaml  matrix-rtc-exposed-services-values.yaml  matrix-rtc-external-livekit-secrets-externally-values.yaml  matrix-rtc-external-livekit-secrets-in-helm-values.yaml  matrix-rtc-host-mode-values.yaml  matrix-rtc-minimal-values.yaml  matrix-rtc-secrets-externally-values.yaml  matrix-rtc-secrets-in-helm-values.yaml  nothing-enabled-values.yaml  pytest-element-call-values.yaml  (+31 more)
charts/synapse/: .helmignore  Chart.yaml  values.schema.json  values.yaml
docs/: ARCHITECTURE.md  advanced.md  architecture.md  maintenance.md  migrating.md
matrix-tools/: Dockerfile  README.md  go.mod  go.sum  go.sum.license
matrix-tools/cmd/: main.go  main_test.go
newsfragments/: 118.added.md  119.fixed.md  120.internal.md  121.fixed.md  122.internal.md  123.internal.md  124.internal.md  126.added.md  127.internal.md  130.internal.md  131.added.md  132.added.md  133.added.md  134.internal.md  135.internal.md  137.added.md  141.changed.md  142.added.md  143.fixed.md  143.internal.md  144.fixed.md  144.internal.md  145.internal.md  146.added.md  147.internal.md  148.internal.md  149.internal.md  150.internal.md  151.internal.md  152.internal.md  153.internal.md  154.internal.md  155.internal.md  156.fixed.md  156.internal.md  157.internal.md  158.internal.md  159.internal.1.md  159.internal.md  160.internal.md  (+131 more)
scripts/: ansible-docker-deploy-to-values.sh  assemble_ci_values_files_from_fragments.sh  assemble_helm_charts_from_fragments.sh  build_ci_runner_image.sh  check_newsfragment.sh  checkov.sh  construct_helm_charts.sh  construct_helm_schema.py  construct_helm_values.py  ct-lint.sh  destroy_test_cluster.sh  generate-signing-key.py  helm_dependency_update_recursive.sh  set_chart_version.sh  setup_test_cluster.sh  spdx_checks.py  test_construct_helm_schema.py  towncrier_to_helm_annotation.py
tests/: conftest.py
tests/artifacts/: __init__.py  certs.py
tests/env/: element-web.rc  synapse.rc
tests/fixtures/: __init__.py  ca.py  cluster.py  data.py  synapse.py
tests/integration/: conftest.py  test_element_call.py  test_element_web.py  test_matrix_authentication_service.py  test_networking.py  test_pods.py  test_synapse.py  test_well_known_delegation.py
tests/lib/: helpers.py  synapse.py  utils.py
tests/manifests/: __init__.py  conftest.py  test_basic.py  test_configs_and_mounts_consistency.py  test_ingresses.py  test_labels.py  test_manifest_test_infrastructure.py  test_pod_containers_ports.py  test_pod_idempotency.py  test_pod_pull_secrets.py  test_pod_securityContext.py  test_secrets.py  test_secrets_consistency.py  test_service_monitors.py  test_serviceaccounts.py  test_services.py  test_statefulset.py  test_synapse.py  test_tolerations.py  test_topology_spread_constraints.py  test_volumes_mounts.py  test_well_known_delegation.py  tests_configs_and_mounts_consistency.py  utils.py
tests/services/: postgresql.py
(+363 files in other folders)
