# Copyright 2024 New Vector Ltd
#
# SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial

[tool.poetry]
description = ""
license = "AGPL-3.0-Only, Element Commercial"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

[tool.poetry.group.dev.dependencies]
pyhelm3 = "^0.4.0"
lightkube = "^0.15.5"
pytz = "^2024.2"
cryptography = "^43.0.3"
platformdirs = "^4.3.6"
python-on-whales = "^0.73.0"
aiohttp = "^3.11.6"
yamale = "^5.2.1"
typer = "^0.12.5"
pytest = "^8.3.3"
ruff = "^0.7.2"
jinja2 = "^3.1.4"
checkov = "^3.2.296"
reuse = "^5.0.2"
signedjson = "^1.1.4"
pytest-kubernetes = {git = "https://github.com/Blueshoe/pytest-kubernetes.git", rev = "feature/17_custom-configs"}
pytest-asyncio-cooperative = {git = "https://github.com/kylegentle/pytest-asyncio-cooperative.git", rev = "fix/missing-kwargs"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# we use asyncio-cooperative
addopts = "-p no:asyncio"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
