# Copyright 2024 New Vector Ltd
#
# SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial

[tool.poetry]
description = ""
license = "AGPL-3.0-Only, Element Commercial"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

[tool.poetry.group.dev.dependencies]
pyhelm3 = "^0.4.0"
lightkube = "^0.17.1"
pytz = "^2025.1"
cryptography = "^44.0.0"
platformdirs = "^4.3.6"
python-on-whales = "^0.75.1"
aiohttp = "^3.11.12"
yamale = "^6.0.0"
typer = "^0.15.1"
pytest = "^8.3.4"
ruff = "^0.9.6"
jinja2 = "^3.1.5"
checkov = "^3.2.363"
reuse = "^5.0.2"
signedjson = "^1.1.4"
aiohttp-retry = "^2.9.1"
ruamel-yaml = "^0.18.10"
pytest-kubernetes = {git = "https://github.com/Blueshoe/pytest-kubernetes.git", rev = "feature/17_custom-configs"}
pytest-asyncio-cooperative = {git = "https://github.com/kylegentle/pytest-asyncio-cooperative.git", rev = "fix/missing-kwargs"}
towncrier = "^24.8.0"
spdx-tools = "^0.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# we use asyncio-cooperative
addopts = "-p no:asyncio --strict-markers"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.towncrier]
package = ""
name = "ESS Community Helm Chart"
filename = "CHANGELOG.md"

# See artifacthub changes kinds https://artifacthub.io/docs/topics/annotations/helm/
# "When using the list of objects option the valid supported kinds are added, changed, deprecated, removed, fixed and security."

[tool.towncrier.fragment.added]
name = "Added"

[tool.towncrier.fragment.changed]
name = "Changed"

[tool.towncrier.fragment.deprecated]
name = "Deprecated"

[tool.towncrier.fragment.removed]
name = "Removed"

[tool.towncrier.fragment.fixed]
name = "Fixed"

[tool.towncrier.fragment.security]
name = "Security"

[tool.towncrier.fragment.internal]
name = "Internal"
